# abusquets-northwind

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
data/: northwind_data.sql  northwind_start.sql
docker/: entrypoint.sh
src/: manage.py  pytest.github.ini  pytest.ini
src/app/: app_container.py  asgi.py  schemas.py  session_deps.py
src/auth/: alembic.ini
src/auth/adapters/api/cli/: __init__.py  secret.py  user.py  user_presenter.py
src/auth/adapters/api/http/: router.py  schemas.py  token.py
src/auth/adapters/spi/repositories/: user.py
src/auth/di/mixins/: __init__.py  token.py  user.py
src/auth/domain/dtos/country/: create_country.py  update_country.py
src/auth/domain/entities/: user.py
src/auth/domain/ports/repositories/: user.py
src/auth/domain/services/: token.py  user.py
src/auth/domain/use_cases/: user.py
src/auth/infra/database/sqlalchemy/models/: user.py
src/config/: __init__.py
src/infra/cache/: memory_cache.py  ports.py  redis_cache.py
src/infra/database/alembic/: env.py
src/infra/database/alembic/versions/: 82107b1b46b7_add_northwind_models.py  ec48bb74a747_init.py
src/infra/database/sqlalchemy/: session.py
src/northwind/adapters/api/http/: category.py  product.py  router.py  supplier.py
src/northwind/adapters/api/http/presenters/: category.py  product.py  supplier.py
src/northwind/adapters/api/http/schemas/: category.py  product.py  supplier.py
src/northwind/adapters/spi/repositories/: category.py  product.py  supplier.py
src/northwind/di/mixins/: __init__.py  category.py  product.py  supplier.py
src/northwind/domain/entities/: category.py  product.py  supplier.py  value_objects.py
src/northwind/domain/ports/repositories/: category.py  product.py  supplier.py
src/northwind/domain/services/: category.py  product.py  supplier.py
src/northwind/domain/use_cases/: category.py  product.py  supplier.py
src/northwind/infra/database/sqlalchemy/: models.py
src/northwind/schemas/: category.py  product.py  supplier.py
src/tests/: conftest.py
src/tests/app/: test_cli.py
src/tests/auth/adapters/api/cli/: test_user.py
src/tests/auth/adapters/api/http/: _test_login.py  _test_protected.py  _test_token.py
src/tests/infra/: test_auth_user.py
src/tests/northwind/: conftest.py
src/tests/northwind/adapters/api/http/: test_category.py
